--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind utilities;
 @tailwind base;
 
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -15,15 +15,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} */
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
-body {
-  @apply bg-black text-white font-sans;
-}
-
-html {
-  scroll-behavior: smooth;
-}
 
 .cursor-trail {
   position: fixed;
